--- a/DSV/a/DSV_Toni.tex
+++ b/DSV/a/DSV_Toni.tex
@@ -130,13 +130,13 @@ $[n]_{modN}=n-N \lfloor \frac{n}{N} \rfloor$
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Faltung %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \subsection{Faltung}
-  \subsubsection{Lineare Faltung}
+  \subsubsection{Lineare Faltung (\textbf{Octave:} conv)}
   \begin{mdframed}[style=exercise]
     \begin{align}
         g(k)*u(k) = \sum_{\nu =0}^{k} g(\nu) u(k-\nu)= \sum_{\nu =0}^{k} g(k-\nu) u(\nu)
     \end{align}
   \end{mdframed}
-  \subsubsection{Zyklische Faltung}
+  \subsubsection{Zyklische Faltung (\textbf{Octave:} cconv)}
   $x_1(k)$ und $x_2(k)$ durch \textbf{Zero-Padding} auf $N = N_1 +N_2 -1$ 
 \scriptsize
   \begin{mdframed}[style=exercise]
@@ -633,14 +633,15 @@ Bestimmung eines einzelnen DFT-Spektralwert X(n). Gleicher Rechenaufwand wie FFT
         X(n_0)= y(k)=x(k)*h(k)|_{k=N}\\
         X(n_0)=y_n(k)=\sum_{\nu=0}^{k}\tilde{x}(\nu)e^{j\frac{2\pi}{N}(k-\nu)n}\\
         h(k)=(e^{\frac{j\cdot 2\cdot\pi\cdot n}{N}})^{k}\cdot\sigma(k)\\
-        n = -j\cdot\frac{N}{2\cdot\pi}\cdot ln(h(1)) -> f_{Goertzel}=\frac{f_{Abtast}}{N}\cdot n
+        n = -j\cdot\frac{N}{2\cdot\pi}\cdot ln(h(1)) \rightarrow f_{Goertzel}=\frac{f_{Abtast}}{N}\cdot n
     \end{align}
   \end{mdframed}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% IIR-Filter %%%%%%%%%%%%%%%%%%%%%%%%%%%%%(%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{IIR-Filter}
   \begin{mdframed}[style=exercise]
     \begin{align}
-        H(z)=\frac{Y(z)}{U(z)}= \frac{\sum_{\mu=0}^{m} b_\mu z^{-\mu}}{\sum_{\nu=0}^{n} a_\nu z^{-\nu}}
+        H(z)=\frac{Y(z)}{U(z)}= \frac{\sum_{\mu=0}^{m} b_\mu z^{-\mu}}{\sum_{\nu=0}^{n} a_\nu z^{-\nu}}\\
+        \sum_{\nu=0}^{n}a_{\nu}\cdot y(k-v) = \sum_{\mu=0}^{m}b_{\mu}\cdot u(k-\mu)
     \end{align}
   \end{mdframed}
 Gruppenlaufzeit $\tau$ = Verzögerungszeit des Systems aufgelöst nach Frequenzen
@@ -685,20 +686,31 @@ Für linearphasige FIR-Filter der Ordnung p gilt für Impulsantwort h(k) eine de
 \end{itemize}
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Kanonische-Formen %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Toleranschema %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Toleranzschema}
+\textbf{Toleranzschema in der log. Notation des \grqq{}filterDesigner\grqq{}: }
   \begin{center}
-      \includegraphics[width=.2\textwidth]{./img/toleranzschema1.png}
-      \includegraphics[width=.25\textwidth]{./img/toleranzschema.png}
+      \includegraphics[width=.5\textwidth]{./img/toleranzschema1.png}
   \end{center}
+  \textbf{Toleranzschema in der lin. Notation: }
+  \begin{center}
+    \includegraphics[width=.5\textwidth]{./img/toleranzschema.png}
+  \end{center}
+
 \begin{itemize}
-    \item $A_{pass}=20~log\left(\textstyle{\frac{1+\delta_{D}}{1-\delta_{D}}}\right)$
+    \item $A_{pass}=20~log\left(\textstyle{\frac{1+\delta_{D}}{1-\delta_{D}}}\right)=\abs{20\cdot log_{10}(1-\delta_{D})}$
+    \item $\delta_{D}= 1- 10^{\frac{-A_{pass}}{20}}$
     \item $A_{Stop}=\abs{20\,log(\delta_{S})}$
     \item $F_{pass}=\frac{\Omega_{D}}{2\pi}f_{A}$
     \item $F_{stop}=\frac{\Omega_{S}}{2\pi}f_{A}$
 \end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Kanonische-Formen %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{1. Kanonische-Form (IIR)}
+\subsection{Kanonische Struktur: }
+\begin{itemize}
+  \item Realisierung von Filtern mit minimaler Speicherzellenanzahl
+  \item für Filter mit Ordnung $p$ sind $p$ Zellen nötig
+\subsubsection{1. Kanonische-Form (IIR)}
+\end{itemize}
 Hälfte der Speicherzellen $a_0=1$
   \begin{center}
       \includegraphics[width=.35\textwidth]{./img/kanon1.png}
@@ -707,7 +719,11 @@ Hälfte der Speicherzellen $a_0=1$
   \begin{center}
       \includegraphics[width=.35\textwidth]{./img/kanon2.png}
   \end{center}
-\subsection{3. Kanonische-Form (IIR)}
+\subsubsection{3. Kanonische-Form (IIR)}
+\textbf{Kaskadierung} erzeugt dritte karnonische Struktur\\
+\textbf{ACHTUNG: } \\
+Aufteilung in Teilsysteme \textbf{erster} oder \textbf{zweiter} Ordnung\\
+ (\grqq{}Second Order Section\grqq{} oder \grqq{}Biquad\grqq{})
   \begin{center}
       \includegraphics[width=.35\textwidth]{./img/kanon3.png}
   \end{center}
@@ -718,7 +734,8 @@ Hälfte der Speicherzellen $a_0=1$
         H_\nu(z)^{(2)}&=\frac{b_{0\nu}+b_{1\nu}z^{-1}+b_{2\nu}z^{-2}}{1+a_{1\nu}z^{-1}+a_{2\nu}z^{-2}}
     \end{align}
   \end{mdframed}
-\subsection{4. Kanonische-Form (IIR)}
+\subsubsection{4. Kanonische-Form (IIR)}
+\textbf{Parallelisierung} durch Partialbruchzerlegung erzeugt vierte karnonische Struktur\\
   \begin{center}
       \includegraphics[width=.25\textwidth]{./img/kanon4.png}
   \end{center}
@@ -727,13 +744,13 @@ Hälfte der Speicherzellen $a_0=1$
         H(z)=b_0+\sum_{\nu=1}^{N_P}H\nu(z)
     \end{align}
   \end{mdframed}
-\subsection{Trasversalfilter (FIR)}
+\subsubsection{Trasversalfilter (FIR)}
 Kann effizient durch MAC-Befehl realisiert werden. 
 Für linearphasige reelwertige FIR-Filter kann die Symmetrie der $b_k$ genutzt werden.
   \begin{center}
       \includegraphics[width=.35\textwidth]{./img/trans.png}
   \end{center}
-\subsection{SOS-Faustregel (IIR)}
+\subsubsection{SOS-Faustregel (IIR)}
 Aufteilung der Pole-Nullstellen in Biquads, sodass sich Einflüsse auf Frequenzgang ausgleichen.
 Vorgehen:
 \begin{itemize}
@@ -915,6 +932,8 @@ Die Auswirkung der Pol- / Nullstellen-Position wird hier anhand eines Systems zw
     \item \textbf{Skalierung der Pol- / Nullstellen: } \\
     Substitution von $N(z)$ durch $N(\frac{z}{c})$\\
     $N(z)=\sum_{\mu=0}^{m} b_\mu z^{-\mu}$ -> $N(\frac{z}{c})=\sum_{\mu=0}^{m} b_\mu (\frac{z}{c})^{-\mu}$
+    \item\textbf{Hinweis Gruppenlaufzeit: } Sprünge der Phase beeinträchtigen die Gruppenlaufzeit nicht\\
+    $\rightarrow$ Phasensprünge für Ableitung ignorieren!
 \end{itemize}
  
  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1016,6 +1035,7 @@ $H(z)=\frac{Y(z)}{U(z)}=\frac{\grqq{}Ausgangssignal\grqq{}}{\grqq{}Eingangssigna
          \item Impulsantwort: gerade \textbf{($h(k)=h(p-k)$)}\\
          oder ungerade \textbf{($h(k)=-h(p-k)$)} Symmetrie
          \item Gruppenlaufzeit:  $\tau_{Gruppe} = -\frac{d}{d\Omega}arg(H(\Omega)) = \frac{p}{2}$ ($p$: Ordnung) 
+         \item Impulsantowrt entspricht den b-Koeffizienten in $H(z)$
          \end{itemize}
     \item \textbf{Vorteile: }
    	 \begin{itemize}
@@ -1034,7 +1054,8 @@ $H(z)=\frac{Y(z)}{U(z)}=\frac{\grqq{}Ausgangssignal\grqq{}}{\grqq{}Eingangssigna
     	\end{itemize}
 \end{itemize}
 
-\textbf{Grundtypen von FIR-Filtern}\\ (mit entsprechenden Eigenschaften):
+\textbf{Grundtypen von FIR-Filtern}\\ (mit entsprechenden Eigenschaften):\\
+\textbf{Hinweis: } Symmetrie immer um $\frac{p}{2}$ \textbf{(!!!)}
 \begin{center}
       \includegraphics[width=.50\textwidth]{./img/Grundtypen_FIR.png}
       \includegraphics[width=0.25\textwidth]{./img/Grundtypen_FIR_NST.png}
@@ -1042,9 +1063,9 @@ $H(z)=\frac{Y(z)}{U(z)}=\frac{\grqq{}Ausgangssignal\grqq{}}{\grqq{}Eingangssigna
 \textbf{Eigenschaften der Typen:}
 \begin{itemize}
 	\item Typ 1: HP, TP, BP, BSP
-	\item Typ 2: kein Hoch- \& Tiefpass
-	\item Typ 3: kein Hochpass
-	\item Typ 4: kein Tiefpass
+	\item Typ 2: kein Hoch- ,Tiefpass \& BSP
+	\item Typ 3: kein Hochpass \& BSP
+	\item Typ 4: kein Tiefpass \& BSP
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1069,7 +1090,8 @@ $H(z)=\frac{Y(z)}{U(z)}=\frac{\grqq{}Ausgangssignal\grqq{}}{\grqq{}Eingangssigna
     	\end{itemize}
 \end{itemize}
 
-\textbf{Grundtypen von IIR-Filtern:}
+\textbf{Grundtypen von IIR-Filtern:}\\
+(\textbf{Achtung: } Amplitudengang ist hier linear angegeben!)
 \begin{center}
       \includegraphics[width=0.50\textwidth]{./img/IIR_Filtertypen_Amplitudengang.png}
       \includegraphics[width=0.50\textwidth]{./img/IIR_Filtertypen_Phasengang.png}
@@ -1085,7 +1107,8 @@ $H(z)=\frac{Y(z)}{U(z)}=\frac{\grqq{}Ausgangssignal\grqq{}}{\grqq{}Eingangssigna
 	\item \textbf{Tschebyscheff Typ I:}
 		\begin{itemize}
 		\item oszilliert im Durchlassb. mit p Extrema \\
-		(p = Filterordnung)
+		(p = Filterordnung)\\
+    \textbf{ACHTUNG: } jeweils Minimas \& Maximas beachten
 		\item monoton fallend im Übergangs‐ \& Sperrbereich
 		\end{itemize}
 	\item \textbf{Tschebyscheff Typ II:}
